<resources>
    <string name="app_name" translatable="false">FarmogoApp</string>
    <string name="cows_younger">Younger cows</string>
    <string name="cows">Cows</string>
    <string name="bulls">Bulls</string>
    <string name="chart_of_evolution">Chart of evolution</string>
    <string name="search">search</string>
    <string name="number_example" translatable="false">1234</string>
    <string name="tab_one">Mer</string>
    <string name="tab_two">Number of farm </string>
    <string name="tab_three">Name</string>
    <string name="tag">TAG</string>
    <string name="id_eartag">Official ID</string>
    <string name="gender">Gender</string>
    <string-array name="mother">
        <item>Mother 1</item>
        <item>Mother 2</item>
        <item>Mother 3</item>
        <item>Mother 4</item>
        <item>Mother 5</item>
        <item>Mother 6</item>
        <item>Mother 7</item>
        <item>Mother 8</item>
        <item>Mother 1</item>
        <item>Mother 2</item>
        <item>Mother 3</item>
        <item>Mother 4</item>
        <item>Mother 5</item>
        <item>Mother 6</item>
        <item>Mother 7</item>
        <item>Mother 8</item>
    </string-array>
    <string-array name="farm">
        <item>Farm 1</item>
        <item>Farm 2</item>
        <item>Farm 3</item>
        <item>Farm 4</item>
        <item>Farm 5</item>
    </string-array>
    <string name="register_animal">Register animal</string>
    <string name="animal_information">Animal Information</string>
    <string name="number">Number</string>
    <string name="gender_example">Female</string>
    <string name="race">Race</string>
    <string name="race_example" translatable="false">Limusin</string>
    <string name="farm_example" translatable="false">2342342342</string>
    <string name="animal_example" translatable="false">ES255858588998</string>
    <string name="record">Record</string>
    <string name="back">back</string>
    <string name="list">list</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="management">Management</string>
    <string name="incidence">Incidence</string>
    <string name="selected_animal">Selected Animal</string>
    <string name="space" translatable="false">\u0020</string>
    <string name="new_farm">New farm</string>
    <string name="edit_farm">Edit farm</string>
    <string name="farm_id">Farm Id</string>
    <string name="builds_number">Num. Buildings</string>
    <string name="add">Add</string>
    <string name="farm_added_succesfull">Farm added Succesfull</string>
    <string name="num_partitions_building">Num. partitions in build </string>
    <string name="choose_farm">Choose farm</string>
    <string name="last_marquet_price">Last Market Price: 1,008.45€</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="login_email_example" translatable="false">test1@farmogo.com</string>
    <string name="password_example" translatable="false"></string>
    <string name="username">Username</string>
    <string name="username_example" translatable="false">FarmWorker</string>
    <string name="registration_succesful">Registration Successful</string>
    <string name="login_succesfull">Login Succesfull</string>
    <string name="sold">Sold</string>
    <string name="died">Died</string>
    <string name="slaughterhouse">Slaughterhouse</string>
    <string name="choose_incidence">"Choose incidence: "</string>
    <string name="animal_incidence">Animal Incidence</string>
    <string name="treatment">Treatment</string>
    <string name="type">Type</string>
    <string name="medicine">Medicine</string>
    <string name="dose">Dose</string>
    <string name="observations">Observations</string>
    <string name="save">Save</string>
    <string name="pregnancy_monitoring">Pregnancy Monitoring</string>
    <string name="weighing">Weighing</string>
    <string name="weight">Weight</string>
    <string name="incidence_saved">Incidence saved correctly</string>
    <string name="scheduled">Scheduled</string>
    <string name="scheduled_for">Scheduled for</string>
    <string name="building_optional">Building (optional)</string>
    <string name="section_optional">Section (optional)</string>
    <string name="unregisrer_cow">Unregister Cow</string>
    <string name="guide">Guide</string>
    <string name="choose_type">Choose type</string>
    <string name="unregistersucces">Unregister succesfully</string>
    <string name="name">Name</string>
    <string name="name_example">Juan</string>
    <string name="telephone">Telephone</string>
    <string name="telephone_example">656565656</string>
    <string name="Exit">Discharge</string>
    <string name="Destino">Destination</string>
    <string name="guia_certificado">Guide/Certificate</string>
    <string name="BirthTitle">Birth</string>
    <string name="OfficialIDbirth">Official Id</string>
    <string name="register_cow">Register cow</string>
    <string name="Date">Date</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="user_auth_failed">User Authentication Failed:</string>
    <string name="log_in">Log in...</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="recovery_email">We have sent an email to reset your password</string>
    <string name="reset_password">Reset password:</string>
    <string name="unregister_cow">Unregister cow</string>
    <string name="location">Location</string>
    <string name="animal_type">Animal type</string>
    <string name="sex">Sex</string>
    <string name="origin">Origin</string>
    <string name="birth_date">Birth date</string>
    <string name="mother_id">Mother ID</string>
    <string name="official_id">Official ID</string>
    <string name="nfc_ear_tag">NFC ear tag</string>
    <string name="registration_failed">Registration failed</string>
    <string-array name="animalTypes">
        <item>Cow</item>
        <item>Bull</item>
        <item>Calf</item>
    </string-array>
    <string-array name="sexs">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="races">
        <item>Pirenaica</item>
        <item>Parda de Montaña</item>
        <item>Limusina</item>
        <item>Frisona</item>
        <item>Charoles</item>
    </string-array>
    <string name="building">Building</string>
    <string-array name="section">
        <item>Section 1</item>
        <item>Section 2</item>
        <item>Section 3</item>
        <item>Section 4</item>
        <item>Section 5</item>
    </string-array>
    <string-array name="incidencesSimple">
        <item>Treatment</item>
        <item>Birth</item>
        <item>Pregnancy Monitoring</item>
        <item>Weighing</item>
        <item>Discharge</item>
        
    </string-array>
    <string-array name="incidencesMultiple">
        <item>Treatment</item>
        <item>Pregnancy Monitoring</item>
        <item>Weighing</item>
        <item>Discharge</item>
        
    </string-array>
    <string-array name="incidences_example">
        <item>95597533343</item>
        <item>95597553222</item>
    </string-array>
    <string-array name="treatmentTypes">
        <item>Vaccine</item>
        <item>Deworm</item>
        <item>Inseminate</item>
        <item>Others</item>
    </string-array>
    <string-array name="dischargeTypes">
        <item>Death</item>
        <item>Sale</item>
        <item>Slaughterhouse</item>
    </string-array>
    <string-array name="pregnancyTypes">
        <item>Zeal</item>
        <item>Stand</item>
        <item>Abortion</item>
    </string-array>
    <string name="get_current_farm_error">Couldn\'t get current farm</string>
    <string name="ALL_CHANNEL_ID" translatable="false">all</string>
    <string name="ALL_CHANNEL" translatable="false">all</string>
    <string name="CHANNEL_DESCRIPTION">Notifications to all Farmogo users</string>
    <string name="topic" translatable="false">all</string>
    <string name="cache_memory">Erasing cache memory…</string>
    <string name="all_farms">All farms</string>
    <string name="all_animals">All animals</string>
    <string name="only_alive">Presents</string>
    <string name="of">of</string>
    <string name="clear_selection">Clear selection</string>
    <string name="farm_name">Farm name</string>
    <string name="counter_prefix">Counter Prefix</string>
    <string name="counter">Counter</string>
    <string name="official_id_farm">Official ID</string>
    <string name="save_farm">Save Farm</string>
    <string name="manage_farms">Manage Farms</string>
    <string name="division">Division</string>
    <string name="races_updated">Races Updated</string>
    <string name="animaltypes_updated">Animal Types updated</string>
    <string name="Discharge_error_response">It is not possible to add a new incident to a discharge animal</string>
    <string name="empty_list">Empty animal list</string>
    <string name="need_farm_to_work">You need a farm to work with app</string>
    <string name="discharged">Discharged</string>
    <string name="nfc_must_enabled">NFC must be enabled</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="log_out">Log Out</string>
    <string name="add_new_farm">Add new Farm</string>
    <string name="add_new_building">Add new Building</string>
    <string name="add_new_division">Add new Division</string>
    <string name="division_">"Division: "</string>
    <string name="building_">"Building: "</string>
    <string name="farm_">"Farm: "</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="You_need_a_farm_to_use_the_app">You need a farm to use the app</string>
    <string name="Add_New_Building_to">"Add New Building to: "</string>
    <string name="Add_New_Division_to">"Add New Division to: "</string>
    <string name="edit">"Edit: "</string>
    <string name="editing_name_farm">You are editing the name of the farm</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="new_division">New Division</string>
    <string name="creating_new_division">You are creating new division</string>
    <string name="Default">Default</string>
    <string name="new_building">New Building</string>
    <string name="creating_new_building">You are creating new building</string>
    <string name="editing_name_division">You are editing the name of the division</string>
    <string name="editing_name_building">You are editing the name of the building</string>
    <string name="default_division">Default Division</string>
    <string name="default_building">Default Building</string>
    <string name="new_farm_created">New Farm Created</string>
    <string name="required_field">Required field</string>
    <string name="tag_has_been_written">Tag has been written</string>
    <string name="empty_animal_list">Empty animal list</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="User_registration_failed">User registration failed</string>
    <string name="User_Authentication_ailed">"User Authentication Failed: "</string>
    <string name="must_enter_name">You must enter a name</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="must_enter_phone_number">You must enter a phone number</string>
    <string name="must_enter_password">You must enter a password</string>
    <string name="password_too_short">The password is too short</string>
    <string name="passwords_doesnt_match">The passwords doesn\'t match</string>
</resources>