<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50sp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:clickable="true"
        android:onClick="forgotPassword"
        android:textSize="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center"
        android:focusable="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/registration" />
</LinearLayout>