<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/scheduled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/scheduled"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear1">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/type"/>

        <Spinner
            android:padding="5dp"
            android:id="@+id/sp_tipo"
            android:background="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/type"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear3">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/medicamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/medicine"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_medicamento"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear4">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/dosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dose"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_dosis"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear5">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/obs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/observations"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_obs"
            android:layout_marginStart="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear6">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/txt_scheduled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/scheduled_for"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_scheduled"
            android:clickable="true"
            android:focusable="false"
            android:layout_marginStart="15dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:id="@+id/linear8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear7">
        <Button
            android:id="@+id/save"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </LinearLayout>

</RelativeLayout>