<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tratamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pregnancy_monitoring"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear1">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/tag_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tag"/>
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            android:text="1231231"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear2">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/estado_embarazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/type"/>

        <Spinner
            android:padding="5dp"
            android:id="@+id/sp_tipo"
            android:background="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/pregnancy_state"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear3">
        <TextView
            android:textColor="@android:color/background_dark"
            android:id="@+id/obs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/observations"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_obs"
            android:layout_marginStart="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear4">
        <Button
            android:id="@+id/save"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </LinearLayout>

</RelativeLayout>