<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    android:layout_marginStart="30sp"
    android:layout_marginEnd="30sp"
    android:layout_marginBottom="10sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ScrapingResult"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/last_marquet_price"
        android:textAlignment="center"
        android:layout_marginBottom="5sp"
        android:textStyle="italic"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/explotationrelativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ScrapingResult"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/Explotation"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/farm_id"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinnerstatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/statisticsrelativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/round_corner"
            android:layout_below="@+id/explotationrelativelayout"
            android:padding="10dp"
            android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/statisticsrelativelayout"
        android:layout_above="@id/stats"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/record"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewStatistics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="31"
            tools:listitem="@layout/recycler_view_statistics"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/search"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:text="@string/search"
            android:paddingEnd="10dp"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_shape"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/Gestion"
            android:text="@string/register_animal"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/round_shape"
            android:textColor="@android:color/white" />
    </LinearLayout>





</RelativeLayout>



